Added Cluck Game to Index

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 
         <section id="projects">
             <h2>Our Projects</h2>
+            <h3>The Game That Started it All</h3>
+            <a href="https://game.cddstudios.com/index.html" target="_blank">Cluck and Bawk</a>
             <p>We are currently working on exciting new titles that blend immersive worlds with compelling narratives. Stay tuned for updates on our latest creations!</p>
         </section>
 
