--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section id="projects">
             <h2>Our Projects</h2>
             <h3>The Game That Started it All</h3>
-            <a href="https://game.cddstudios.com/Cluck and Bawk/Cluck.html" target="_blank">Cluck and Bawk</a>
+            <a href="https://Cluck.cddstudios.com/Cluck and Bawk/Cluck.html" target="_blank">Cluck and Bawk</a>
             <p>We are currently working on exciting new titles that blend immersive worlds with compelling narratives. Stay tuned for updates on our latest creations!</p>
         </section>
 
