--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <section class="Origins">
             <h2>Origins</h2>
-            <a class="cta" href="/cluck.html">Play</a>
+            <a class="cta" href="https://cluck.cddstudios.com/Cluck%20and%20Bawk/Cluck.html">Play</a>
             <p>Check out the game that started the creation of <br>CDDS</p>
         </section>
 
@@ -105,9 +105,9 @@
             <a class="cta" href="/sign-up.html">Sign up for Updates</a>
             <p id="socials-callout">Check out our progress and updates on social media!</p>
             <div class="social-links">
-                <a href="#" target="_blank">Twitter</a>
-                <a href="#" target="_blank">YouTube</a>
-                <a href="#" target="_blank">Twitch</a>
+                <a href="https://x.com/DevRooster_" target="_blank">Twitter</a>
+                <a href="https://www.youtube.com/@DevRooster" target="_blank">YouTube</a>
+                <a href="https://www.twitch.tv/DevRoosterTV" target="_blank">Twitch</a>
             </div>
         </section>
     </main>
