--- a/thank-you-for-signing-up.html
+++ b/thank-you-for-signing-up.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up for Updates | CDD Studios</title>
     <style>
-        #global {
-            margin: auto;
-            position: relative;
-        }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -21,23 +17,44 @@
             background-color: #27293d;
             padding: 20px;
         }
-        iframe {
-            max-width: 650px;
-            margin-left: auto;
-            margin-right: auto;
-            width: 60%;
-            height: 750px;
-            border: 3px solid #4caf50;
-            border-radius: 6px"
-        }
         header h1 {
             margin: 0;
         }
         main {
             padding: 20px;
-            
         }
-
+        form {
+            margin: 20px auto;
+            max-width: 400px;
+            background-color: #2a2a40;
+            padding: 20px;
+            border-radius: 10px;
+            border: 1px solid #4caf50;
+        }
+        form label {
+            display: block;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+        form input[type="email"] {
+            width: 90%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #4caf50;
+            border-radius: 5px;
+        }
+        form button {
+            background-color: #4caf50;
+            color: #ffffff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+        form button:hover {
+            background-color: #45a049;
+        }
         footer {
             padding: 10px;
             background-color: #27293d;
@@ -54,15 +71,15 @@
             color: #fff;
             background: transparent;
             font-weight: bold;
-
             transition: background 0.3s, color 0.3s;
         }
         .back-button:hover {
             background-color: #451049;
             color: #1e1e1e;
         }
-        .button-container {
-            margin-bottom: 250px;
+        img{
+            width: 10%;
+            height: 10%;
         }
     </style>
 </head>
@@ -71,9 +88,8 @@
         <h1>Sign Up for Updates</h1>
     </header>
     <main>
-        <iframe 
-        src="https://6f5813bd.sibforms.com/serve/MUIFABVMBvwugTS7yOmu0qr4Jf4Ks0U0DonP4zwcFpXOjaUDnZNFEIcoI9wez4YGlnikazHACMip5VKalPoSV1Vqrmq5TfJ_PWByV5uzWUepAOewABuDt1q1fj15p347vDm3431LiHZoccuamvO2qAzZ7YDo6Jo03ysUxYiY3s-CKlP5zmk1YBQ8zh8iMPHCMv3zLPRtqVY9TrI-"
-        allowfullscreen ></iframe>
+        <h2>Thank you!<br></h2>
+        <img src="Images/SleepingRooster.jpg">
     </main>
     <div class="button-container">
         <a href="/index.html" class="back-button">Back</a>
